Rewrote DB layer